feat: added SGScript CRD and related REST API endpoints